# obsidian-knowledge-base

./: .env.example  .gitignore  CLAUDE.md  pyproject.toml
src/kb/: __init__.py  chunker.py  cli.py  config.py  database.py  embeddings.py  linker.py  llm.py  models.py  obsidian.py  pipeline.py  rag.py  utils.py  vectorstore.py
src/kb/plugins/: __init__.py  base.py  markdown.py  pdf.py  twitter.py  web.py
tests/: conftest.py  test_chunker.py  test_database.py  test_linker.py  test_models.py  test_obsidian.py  test_pipeline.py  test_rag.py  test_vectorstore.py
tests/test_plugins/: test_pdf.py  test_twitter.py  test_web.py
